refactor GsonMapper.java
Signed-off-by: Martin Grześlowski <martin.grzeslowski@gmail.com>